--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         <div class="seventh-section-slide-wrapper">
             <div class="seventh-section-slider">
                 <img id="seventh-section-slide-1" src="images/kosgoda2.jpg" alt="an image of hikkaduwa hatchery">
-                <img id="seventh-section-slide-2" src="images/hikkaduwa2.JPG" alt="an image of kosgoda hatchery">
+                <img id="seventh-section-slide-2" src="images/hikkaduwa2.jpg" alt="an image of kosgoda hatchery">
                 <img id="seventh-section-slide-3" src="images/bentota3.jpg" alt="an image of bentota hatchery">
             </div>
             <div class="seventh-section-slider-nav">
@@ -311,4 +311,3 @@
 
 </body>
 </html>
-
