--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <label for="menu-bar">Menu</label>
         <nav class="nav-bar">
             <ul class="nav-bar-items">
-                <li><a id="nav-a" class="active" href="#">Home</a></li>
-                <li><a href="#">Turtles</a></li>
+                <li><a id="nav-a" class="active" href="index.html">Home</a></li>
+                <li><a href="categories.html">Turtles</a></li>
                 <li><a href="#">Threats</a></li>
                 <li><a href="#">Hikkaduwa</a></li>
                 <li>
@@ -50,20 +50,30 @@
                 <img src="icons/angle-down_teel.svg" alt="">
             </button>
         </div>
-    </div>
+    </div> 
     
     <section id="first-section" class="introduction">
         <div class="introduction-main">
             <div class="introduction-main-header"> <!-- header was here -->
                 <section class="introduction-main-header-title">
-                    <h1>Hikkaduwa</h1>
-                    <h1>Marine Turtle Conservation and Rescue Center</h1>
+                    <h1>What is a turtle hatchery?</h1>
                     <hr>
                     <h2>About</h2>
+                    <br>
                 </section>
                 <section class="introduction-main-header-text">
-                    <p>The Sea Turtle Hatchery and Rescue Centre is located north of Hikkaduwa, a few kilometers away from the town's main area. Its goal is to preserve endangered turtle species, and it is one among several hatcheries on the southern coast of the island. Initially launched as a community initiative to safeguard the region's biodiversity, it has developed into a complete hatchery and rescue center, where teams work tirelessly day and night to analyze, nurture and shield multiple species of turtles.</p>
-                    <p>It takes care of five different turtle species, namely Olive Ridley, Leatherback, Loggerhead, Hawksbill, and Green Turtles. The centre has modern facilities including water tanks to care for the newborn turtles and adult species that have been rescued due to injuries. Visitors can observe the unique sight of turtle egg-laying, with the eggs carefully placed in neat sand mounds. The centre closely monitors each of these mounds to track the hatching process of the turtle eggs.
+                    <p>A turtle hatchery is a protected area where sea turtles can safely lay their eggs and where the hatched baby turtles
+                        can crawl out into the ocean. These hatcheries play a crucial role in the conservation of sea turtles, as they help
+                        to increase the survival rates of turtle hatchlings and protect them from predators, poachers, and other dangers. In
+                        addition, hatcheries provide an opportunity for scientists and conservationists to study turtle populations and
+                        develop strategies for their conservation.
+                    </p><br>
+                    <p>Turtle hatcheries are particularly important in areas where sea turtle populations are declining due to habitat
+                        destruction, pollution, climate change, and other human-related factors. By providing a safe environment for turtle
+                        eggs to hatch and baby turtles to grow, hatcheries help to maintain and restore turtle populations. However,
+                        hatcheries are not a long-term solution to the problem of declining turtle populations, as they do not address the
+                        root causes of the problem. Therefore, hatcheries must be complemented with efforts to address the threats facing
+                        turtle populations, such as habitat protection, pollution reduction, and sustainable fishing practices.
                     </p>
                 </section>
                 <section>
@@ -74,7 +84,8 @@
                     </button>
                 </section>
             </div>
-        </section>
+        </div>
+    </section>
 
     <section class="second-section">
         <div clas="second-section-container">
@@ -175,13 +186,14 @@
     <section class="fifth-section">
         <div class="fifth-section-container">
             <div class="fifth-section-header">
-                <h2>What is a turtle hatchery?</h2>
+                <h2>Hikkaduwa</h2>
+                <h2>Marine Turtle Conservation and Rescue Center</h2>
                 <hr>
             </div>
             <div>
-                <p>A turtle hatchery is a protected area where sea turtles can safely lay their eggs and where the hatched baby turtles can crawl out into the ocean. These hatcheries play a crucial role in the conservation of sea turtles, as they help to increase the survival rates of turtle hatchlings and protect them from predators, poachers, and other dangers. In addition, hatcheries provide an opportunity for scientists and conservationists to study turtle populations and develop strategies for their conservation.
-                </p><br>
-                <p>Turtle hatcheries are particularly important in areas where sea turtle populations are declining due to habitat destruction, pollution, climate change, and other human-related factors. By providing a safe environment for turtle eggs to hatch and baby turtles to grow, hatcheries help to maintain and restore turtle populations. However, hatcheries are not a long-term solution to the problem of declining turtle populations, as they do not address the root causes of the problem. Therefore, hatcheries must be complemented with efforts to address the threats facing turtle populations, such as habitat protection, pollution reduction, and sustainable fishing practices.
+                <p>The Sea Turtle Hatchery and Rescue Centre is located north of        Hikkaduwa, a few kilometers away from the town's main area. Its goal is to preserve endangered turtle species, and it is one among several hatcheries on the southern coast of the island. Initially launched as a community initiative to safeguard the region's biodiversity, it has developed into a complete hatchery and rescue center, where teams work tirelessly day and night to analyze, nurture and shield multiple species of turtles.</p><br>
+                
+                <p>It takes care of five different turtle species, namely Olive Ridley, Leatherback, Loggerhead, Hawksbill, and Green Turtles. The centre has modern facilities including water tanks to care for the newborn turtles and adult species that have been rescued due to injuries. Visitors can observe the unique sight of turtle egg-laying, with the eggs carefully placed in neat sand mounds. The centre closely monitors each of these mounds to track the hatching process of the turtle eggs.
                 </p>
             </div>
         </div>
@@ -201,6 +213,7 @@
             </div>
             <div>
                 <p>Sri Lanka is home to three well-known turtle hatcheries that attract tourists: <strong>Hikkaduwa, Kosgoda, and Bentota</strong>
+                <br>
                 <br>
                 <p>Thesehatcheries work to protect and conserve sea turtles, which are endangered due to habitat loss and poaching.
                     At these hatcheries, visitors can learn about the different species of turtles, see the eggs and hatchlings, and
