--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                 <div class="footer-list">
                     <ul>
                         <h4>Turtles</h4>
-                        <li><a href="#">Categories</a></li>
+                        <li><a href="categories.html">Categories</a></li>
                         <li><a href="#">Threats</a></li>
                         <li><a href="#">Gallery</a></li>
                     </ul>
