--- a/categories.html
+++ b/categories.html
@@ -210,6 +210,12 @@
                     <td data-title="Location">Kosgoda, Rekawa, Bundala, Pottuvil and Bentota</td>
                 </tr>
             </tbody>
+            <tfoot>
+                <tr>
+                    <td>Total No of Species</td>
+                    <td colspan="4">5</td>
+                </tr>
+            </tfoot>
         </table>
     </section>
 
