--- a/categories.html
+++ b/categories.html
@@ -22,7 +22,7 @@
             <ul class="nav-bar-items">
                 <li><a id="nav-a" class="active" href="index.html">Home</a></li>
                 <li><a href="categories.html">Turtles</a></li>
-                <li><a href="#">Threats</a></li>
+                <li><a href="threats.html">Threats</a></li>
                 <li><a href="#">Hikkaduwa</a></li>
                 <li>
                     <a href="#">Other</a>
@@ -47,13 +47,13 @@
                 <br>
                 <h2>Categories</h2>
             </div>
-            <button class="scroll-btn" onclick="location.href='#main-section-1'">
+            <button class="scroll-btn" onclick="location.href='#main-section-id'">
                 <img src="icons/angle-down_teel.svg" alt="">
             </button>
         </div>
     </div>
     
-    <section id="main-section-1" class="main-section-1">
+    <section id="main-section-id" class="main-section-1">
         <div class="categories-first-section">
             <div class="categories-first-section-container">
         
@@ -197,10 +197,10 @@
                         <h2>Mass :</h2>
                         <h3>160 kg</h3><br>
                         <h2>Conservation status :</h2>
-                        <h3>Endangered</h3><br>
+                        <h3>(Endangered)</h3><br>
                     </div>
                     <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.4885602430104!2d81.20791857585418!3d6.199091626846426!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae69842ecb214eb%3A0x145a2d402f36beb0!2sBundala%20National%20park!5e0!3m2!1sen!2slk!4v1684303974602!5m2!1sen!2slk" allowfullscreen="" loading="lazy"
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31480.808563005954!2d79.22914867218357!3d9.499938374332487!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b01dba613ed086b%3A0xecca11a6a4f0ddc4!2sPalk%20Bay!5e0!3m2!1sen!2slk!4v1684348389856!5m2!1sen!2slk" allowfullscreen="" loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
@@ -209,9 +209,15 @@
             <div class="categories-fifth-section-description">
                 <h2>Description</h2>
                 <hr>
-                <p>The hawksbill sea turtle (Eretmochelys imbricata) continues to captivate nature enthusiasts and researchers alike with its presence in the coastal waters of Sri Lanka. Amidst this tropical paradise.
+                <p> The loggerhead turtle (Caretta caretta) can also be found in the coastal areas in Sri Lanka, adding to the country's rich biodiversity. These captivating creatures, known for their large heads and powerful jaws, can be spotted in several locations along Sri Lanka's coast.
                 </p><br>
-                <p><strong>Bundala National Park </strong>is a significant location where hawksbill sea turtles can be spotted in Sri Lanka. Situated in the southern part of the country, this national park is renowned for its diverse ecosystems, including wetlands, lagoons, and sand dunes. Bundala's pristine coastline provides an ideal nesting ground for hawksbill turtles. From November to February, visitors have the opportunity to witness the incredible sight of female turtles emerging from the sea to lay their eggs in the soft sandy shores. Conservation efforts have been implemented to protect the nesting sites and ensure the survival of these endangered turtles.</p>
+                <p>
+                    One prominent location where loggerhead turtles can be encountered in Sri Lanka is <strong>the Rekawa Beach</strong>. Situated on the southeastern coast, this pristine stretch of shoreline serves as a vital nesting site for loggerhead turtles. From October to January, female turtles emerge under the moonlight to lay their eggs in the warm sands. Witnessing this remarkable nesting process is an awe-inspiring experience that highlights the importance of conservation efforts to  protect these endangered creatures and their habitats.
+                </p><br>
+
+                <p>
+                Another significant site for loggerhead turtles is the <strong>Palk Bay region</strong>, located between Sri Lanka and India. This area is known for its diverse marine ecosystem, and it provides a rich foraging ground for loggerheads. The nutrient-rich waters attract an abundance of prey species, ensuring a steady food supply for the turtles.
+                </p>
             </div>
         </div>
     </section>
@@ -270,8 +276,16 @@
             </tbody>
             <tfoot>
                 <tr>
-                    <td colspan="2.5">Total No of Species</td>
-                    <td colspan="2.5">5</td>
+                    <td data-title="IUCN Definition">(Critically Endangered)</td>
+                    <td colspan="4" data-title="Description">Species is considered to be facing an extremely high risk of extinction in the wild</td>
+                </tr>
+                <tr>
+                    <td data-title="IUCN Definition">(Endangered)</td>
+                    <td colspan="4" data-title="Description">Species is considered to be facing a very high risk of extinction in the wild</td>
+                </tr>
+                <tr>
+                    <td data-title="IUCN Definition">(Vulnerable)</td>
+                    <td colspan="4" data-title="Description">Species is considered to be facing a high risk of extinction in the wild</td>
                 </tr>
             </tfoot>
         </table>
