--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <ul class="nav-bar-items">
                 <li><a id="nav-a" class="active" href="index.html">Home</a></li>
                 <li><a href="categories.html">Turtles</a></li>
-                <li><a href="#">Threats</a></li>
+                <li><a href="threats.html">Threats</a></li>
                 <li><a href="#">Hikkaduwa</a></li>
                 <li>
                     <a href="#">Other</a>
@@ -42,7 +42,7 @@
         </div>
         <div class="main-viewport-header">
             <div class="main-viewport-header-text">
-                <span>Discover more about</span>
+                <span>Dive in</span>
                 <br>
                 <h2>Turtletopia</h2>
             </div>
@@ -293,7 +293,7 @@
                     <ul>
                         <h4>Turtles</h4>
                         <li><a href="categories.html">Categories</a></li>
-                        <li><a href="#">Threats</a></li>
+                        <li><a href="threats.html">Threats</a></li>
                         <li><a href="#">Gallery</a></li>
                     </ul>
                 </div>
