--- a/categories.html
+++ b/categories.html
@@ -8,9 +8,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100;200;300;400;700&family=Noto+Emoji&family=Poppins:wght@100;300;500&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="categories.css">
-    <link rel="stylesheet" href="common.css">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="css/categories.css">
+    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/main.css">
 
     <title>turtletopia</title>
 </head>
@@ -23,6 +23,7 @@
                 <li><a id="nav-a" class="active" href="index.html">Home</a></li>
                 <li><a href="categories.html">Turtles</a></li>
                 <li><a href="threats.html">Threats</a></li>
+                <li><a href="#">Gallery</a></li>
                 <li><a href="#">Hikkaduwa</a></li>
                 <li>
                     <a href="#">Other</a>
