--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100;200;300;400;700&family=Noto+Emoji&family=Poppins:wght@100;300;500&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="common.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/common.css">
 
     <title>turtletopia</title>
 </head>
@@ -22,6 +22,7 @@
                 <li><a id="nav-a" class="active" href="index.html">Home</a></li>
                 <li><a href="categories.html">Turtles</a></li>
                 <li><a href="threats.html">Threats</a></li>
+                <li><a href="#">Gallery</a></li>
                 <li><a href="#">Hikkaduwa</a></li>
                 <li>
                     <a href="#">Other</a>
@@ -75,13 +76,6 @@
                         root causes of the problem. Therefore, hatcheries must be complemented with efforts to address the threats facing
                         turtle populations, such as habitat protection, pollution reduction, and sustainable fishing practices.
                     </p>
-                </section>
-                <section>
-                    <button class="introduction-main-header-button">
-                        <span>
-                            See More
-                        </span>
-                    </button>
                 </section>
             </div>
         </div>
@@ -267,9 +261,11 @@
         </div>
         <div>
             <button class="eighth-section-button">
-                <span>
-                    See more
-                </span>
+                <a href="threats.html">
+                    <span>
+                        See more
+                    </span>
+                </a>
             </button>
         </div>
     </section>
