--- a/threats.html
+++ b/threats.html
@@ -8,10 +8,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100;200;300;400;700&family=Noto+Emoji&family=Poppins:wght@100;300;500&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     
-    <link rel="stylesheet" href="threats.css">
-    <link rel="stylesheet" href="categories.css">
-    <link rel="stylesheet" href="common.css">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="css/threats.css">
+    <link rel="stylesheet" href="css/categories.css">
+    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/main.css">
 
     <title>threats</title>
 </head>
@@ -24,6 +24,7 @@
                 <li><a id="nav-a" class="active" href="index.html">Home</a></li>
                 <li><a href="categories.html">Turtles</a></li>
                 <li><a href="threats.html">Threats</a></li>
+                <li><a href="#">Gallery</a></li>
                 <li><a href="#">Hikkaduwa</a></li>
                 <li>
                     <a href="#">Other</a>
@@ -197,9 +198,9 @@
             <h3>Preserving Sea Turtles : Current Initiatives in Action</h3>
             <hr>
             <ul>
+                <li class="threat-outro-list-item"><a href="https://www.seaturtlestatus.org/threats-to-turtles">SWOT - The State of the World’s Sea Turtles</a></li>
                 <li class="threat-outro-list-item"><a href="https://www.rainforesttrust.org/urgent-projects/creating-cote-divoires-first-marine-protected-area-2/">Côte d’Ivoire’s First Marine Protected Area</a></li>
                 <li class="threat-outro-list-item"><a href="https://seasave.org/week-in-review/">Ocean Week In Review</a></li>
-                <li class="threat-outro-list-item"><a href="https://www.seaturtlestatus.org/threats-to-turtles">SWOT - The State of the World’s Sea Turtles</a></li>
             </ul>
             <div class="threat-outro-tiles">
                 <img src="images/bentota3.jpg" alt="">
