--- a/categories.html
+++ b/categories.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100;200;300;400;700&family=Noto+Emoji&family=Poppins:wght@100;300;500&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css/categories.css">
-    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="common.css">
     <link rel="stylesheet" href="css/main.css">
 
     <title>turtletopia</title>
@@ -24,11 +24,11 @@
                 <li><a href="categories.html">Turtles</a></li>
                 <li><a href="threats.html">Threats</a></li>
                 <li><a href="#">Gallery</a></li>
-                <li><a href="#">Hikkaduwa</a></li>
+                <li><a href="hikkaduwa.html">Hikkaduwa</a></li>
                 <li>
                     <a href="#">Other</a>
                     <ul class="nav-bar-items-2">
-                        <li><a href="#">Kosgoda</a></li>
+                        <li><a href="kosgoda.html">Kosgoda</a></li>
                         <li><a href="#">Bentota</a></li>
                     </ul>
                 </li>
@@ -258,7 +258,7 @@
                     <td data-title="Scientific Name">Lepidochelys Olivacea</td>
                     <td data-title="Mass">36 - 49 kg (Adult)</td>
                     <td data-title="Conservation Status">Vulnerable</td>
-                    <td data-title="Location">Kosgoda, Bentota and Trincomalee Beachs</td>
+                    <td data-title="Location">Kosgoda, Bentota and Trincomalee Beaches</td>
                 </tr>
                 <tr>
                     <td data-title="Category">Hawksbill</td>
