--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100;200;300;400;700&family=Noto+Emoji&family=Poppins:wght@100;300;500&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="common.css">
 
     <title>turtletopia</title>
 </head>
-<body >
+<body>
     <header>
         <input type="checkbox" id="menu-bar">
         <label for="menu-bar">Menu</label>
@@ -23,11 +23,11 @@
                 <li><a href="categories.html">Turtles</a></li>
                 <li><a href="threats.html">Threats</a></li>
                 <li><a href="#">Gallery</a></li>
-                <li><a href="#">Hikkaduwa</a></li>
+                <li><a href="hikkaduwa.html">Hikkaduwa</a></li>
                 <li>
                     <a href="#">Other</a>
                     <ul class="nav-bar-items-2">
-                        <li><a href="#">Kosgoda</a></li>
+                        <li><a href="kosgoda.html">Kosgoda</a></li>
                         <li><a href="#">Bentota</a></li>
                     </ul>
                 </li>
@@ -239,7 +239,7 @@
                 maintain healthy seagrass beds and coral reefs by grazing on the plants that grow there, which creates space for new
                 growth. Additionally, sea turtles serve as a food source for many predators, helping to balance the ocean's food chain.
                 Sadly, many turtle populations are threatened by human activities such as poaching, habitat destruction, and pollution.
-            </p>
+            </p><br>
             <ol>
                 <li>Sea turtles help maintain healthy marine ecosystems</li>
                 <li>They serve as food for predators, balancing the food chain</li>
@@ -251,7 +251,7 @@
                 young turtles to grow before being released into the wild. Hatcheries protect the eggs from natural predators and human
                 activities, which can damage or destroy nests. By incubating the eggs and keeping the hatchlings safe during the
                 vulnerable early stages of their lives, hatcheries help to increase the survival rates of turtle populations.
-            </p>
+            </p><br>
             <ul dir="rtl">
                 <li>Hatcheries provide a safe place for turtle eggs to hatch and grow</li>
                 <li>They protect eggs from natural predators and human activities</li>
@@ -260,7 +260,7 @@
             </div>
         </div>
         <div>
-            <button class="eighth-section-button">
+            <button class="button-for-all">
                 <a href="threats.html">
                     <span>
                         See more
