--- a/threats.html
+++ b/threats.html
@@ -9,8 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100;200;300;400;700&family=Noto+Emoji&family=Poppins:wght@100;300;500&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     
     <link rel="stylesheet" href="css/threats.css">
-    <link rel="stylesheet" href="css/categories.css">
-    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="common.css">
     <link rel="stylesheet" href="css/main.css">
 
     <title>threats</title>
@@ -25,11 +24,11 @@
                 <li><a href="categories.html">Turtles</a></li>
                 <li><a href="threats.html">Threats</a></li>
                 <li><a href="#">Gallery</a></li>
-                <li><a href="#">Hikkaduwa</a></li>
+                <li><a href="hikkaduwa.html">Hikkaduwa</a></li>
                 <li>
                     <a href="#">Other</a>
                     <ul class="nav-bar-items-2">
-                        <li><a href="#">Kosgoda</a></li>
+                        <li><a href="kosgoda.html">Kosgoda</a></li>
                         <li><a href="#">Bentota</a></li>
                     </ul>
                 </li>
@@ -60,7 +59,7 @@
         <div class="threat-intro-container">
             <h2>Sea Turtles on the Verge of Extinction</h2>
             <hr>
-            <p>Over the past two centuries, sea turtles have faced significant threats that have led to their disappearance from certain regions and placed them on the verge of extinction. Human activities have been a major cause of these disturbances in the ocean ecosystems, impacting sea turtles in various ways</p>
+            <p>Over the past two centuries, sea turtles have faced significant threats that have led to their disappearance from certain regions and placed them on the verge of extinction. Human activities have been a major cause of these disturbances in the ocean ecosystems, impacting sea turtles in various ways.</p>
         </div>
     </section>
 
@@ -109,7 +108,7 @@
                     <li>Support initiatives to reduce greenhouse gas emissions and combat global warming through renewable energy adoption and sustainable practices</li>
                     <li>Implement adaptive management strategies that account for the impacts of climate change on sea turtles, such as beach nourishment to combat beach erosion and protecting nesting areas from rising sea levels</li>
                     <li>Conduct research on the effects of climate change on sea turtles and develop targeted conservation plans based on scientific findings</li>
-                    <li>Enhance public awareness and education on climate change impacts on sea turtles to encourage individuals and communities to take action.</li>
+                    <li>Enhance public awareness and education on climate change impacts on sea turtles to encourage individuals and communities to take action</li>
                     <li>Collaborate with international organizations and governments to develop global strategies for climate change mitigation and adaptation</li>
                 </ul>
             </div>
@@ -161,7 +160,7 @@
                     <li>Provide training and incentives to fishermen to ensure proper use and maintenance of TEDs and encourage the reporting of urtle interactions</li>
                     <li>Implement area and season-specific fishing regulations and restrictions to reduce turtle bycatch in high-risk areas</li>
                     <li>Support research and development of innovative fishing gear modifications and alternative fishing methods that minimize sea turtle interactions</li>
-                    <li>Enhance collaboration between fisheries management organizations, fishermen, and conservation groups to develop and implement effective bycatch reduction strategies.</li>
+                    <li>Enhance collaboration between fisheries management organizations, fishermen, and conservation groups to develop and implement effective bycatch reduction strategies</li>
                 </ul>
             </div>
             <img src="images/pexels-alain-margreve-13085872.jpg" alt="">
@@ -203,10 +202,22 @@
                 <li class="threat-outro-list-item"><a href="https://seasave.org/week-in-review/">Ocean Week In Review</a></li>
             </ul>
             <div class="threat-outro-tiles">
-                <img src="images/bentota3.jpg" alt="">
-                <img src="images/bentota3.jpg" alt="">
-                <img src="images/bentota3.jpg" alt="">
+                <img src="images/pexels-alain-margreve-13085872.jpg" alt="">
+                <img src="images/pexels-alain-margreve-13085872.jpg" alt="">
+                <img src="images/pexels-alain-margreve-13085872.jpg" alt="">
             </div>
+        </div>
+    </section>
+
+    <section class="threat-other">
+        <div class="threat-other-container">
+            <h3>Turtle Hatchery Projects in Sri Lanka</h3>
+            <hr>
+            <ul>
+                <li class="threat-other-list-item"><a href="hikkaduwa.html">Hikkaduwa Turtle Hatchery</a></li>
+                <li class="threat-other-list-item"><a href="bentota.html">Bentota Turtle Hatchery</a></li>
+                <li class="threat-other-list-item"><a href="kosgoda.html">Kosgoda Turtle Hatchery</a></li>
+            </ul>
         </div>
     </section>
 
