--- a/bentota.html
+++ b/bentota.html
@@ -29,7 +29,7 @@
                     <a href="#">Other</a>
                     <ul class="nav-bar-items-2">
                         <li><a href="kosgoda.html">Kosgoda</a></li>
-                        <li><a href="bentota.html">Bentota</a></li>
+                        <li><a href="#">Bentota</a></li>
                     </ul>
                 </li>
                 <li><a href="#">Donate</a></li>
@@ -40,71 +40,69 @@
     <div class="main-viewport">
         <div class="main-viewport-images">
             <div>
-                <img class="main-viewport-image" src="images/kosg.jpg" alt="">
+                <img class="main-viewport-image" src="images/bent.jpg" alt="">
             </div>
         </div>
         <div class="main-viewport-header">
             <div class="main-viewport-header-text">
                 <span>Explore</span>
-                <h2>Kosgoda</h2>
+                <h2>Bentota</h2>
                 <h2>&#9730</h2>
                 <br>
             </div>
-            <button class="scroll-btn" onclick="location.href='#kosgoda-first-id'">
+            <button class="scroll-btn" onclick="location.href='#bentota-first-id'">
                 <img src="icons/angle-down_teel.svg" alt="">
             </button>
         </div>
     </div>
 
-    <section id="kosgoda-first-id" class="kosgoda-first">
-        <div class="kosgoda-first-text-container">
+    <section id="bentota-first-id" class="bentota-first">
+        <div class="bentota-first-text-container">
             <h3>About</h3>
             <hr>
-            <p>Kosgoda Beach, nestled along the beautiful coastline of Sri Lanka, is a stunning destination known for its pristine sandy shores and crystal-clear turquoise waters. With its tranquil atmosphere and natural beauty, Kosgoda Beach offers a serene escape for those seeking relaxation and rejuvenation.</p>
+            <p>Bentota, located on the southwestern coast of Sri Lanka, is a tropical paradise known for its stunning beaches, lush greenery, and vibrant cultural heritage. This coastal town offers a perfect blend of relaxation, adventure, and cultural exploration, making it a popular destination for travelers.</p>
             <br>
-            <p>Stretching for miles, the beach presents a picturesque setting where visitors can soak up the sun, stroll along the soft sands, and enjoy the gentle ocean breeze. The calm and inviting waters of the Indian Ocean make it an ideal spot for swimming, allowing visitors to cool off and enjoy a refreshing dip in the sea.</p>
+            <p>Bentota's pristine beaches are the main attraction for visitors. With their golden sands, clear turquoise waters, and swaying palm trees, these beaches provide an idyllic setting for sunbathing, swimming, and water sports. Whether you want to soak up the sun, try your hand at surfing or jet skiing, or simply take a leisurely stroll along the shore, Bentota's beaches offer a range of activities to suit every traveler's preferences.</p>
         </div>
-        <div class="kosgoda-first-image-container">
+        <div class="bentota-first-image-container">
             <img src="images/pollution2.jpg" alt="">
             <img class="second-image" src="images/pollution2.jpg" alt="">
             <img src="images/pollution2.jpg" alt="">
         </div>
     </section>
 
-    <section class="kosgoda-second">
-        <div class="kosgoda-second-text-container">
+    <section class="bentota-second">
+        <div class="bentota-second-text-container">
             <h3>Kosgoda Turtle Hatchery</h3>
             <hr>
-            <p>The Kosgoda Sea Turtle Conservation Project, located in the picturesque coastal town of Kosgoda, Sri Lanka, is a renowned hatchery dedicated to the preservation and protection of sea turtles. Established with the mission to conserve these magnificent creatures, the hatchery plays a vital role in raising awareness, conducting research, and implementing
-            conservation measures.</p>
+            <p>The hatchery serves as a sanctuary for various species of sea turtles, including the Green Turtle, Hawksbill Turtle, Olive Ridley Turtle, Loggerhead Turtle, and Leatherback Turtle. It provides a safe environment for these turtles to lay their eggs, ensuring their successful hatching and subsequent release into the ocean.</p>
             <br>
-            <p>At the Kosgoda hatchery, visitors have the unique opportunity to learn about the life cycle of sea turtles and witness  the remarkable process of nesting, hatching, and releasing of baby turtles into the ocean. The knowledgeable staff and volunteers provide informative guided tours, offering valuable insights into the challenges faced by sea turtles and the conservation efforts undertaken to safeguard their future.</p>
+            <p>One of the highlights of visiting the hatchery is the opportunity to witness the release of baby turtles into the sea. This awe-inspiring experience allows visitors to witness the beginning of these tiny turtles' incredible journey as they make their way into the vast ocean, navigating the waves and embarking on their lifelong adventure.</p>
             <br>
-            <p>The hatchery serves as a safe haven for various species of sea turtles, including the Olive Ridley, Green, Loggerhead,
-            Hawksbill, and Leatherback turtles. These gentle giants face numerous threats, such as habitat destruction, pollution, and poaching. The dedicated team at Kosgoda works tirelessly to protect the turtles, provide a nurturing environment for nesting, and ensure the survival of hatchlings.</p>
+            <p>The Bentota Sea Turtle Hatchery also actively participates in research programs aimed at understanding the behavior and life cycles of sea turtles. By collecting valuable data and conducting scientific studies, the hatchery contributes to the overall conservation efforts and helps raise awareness about the importance of protecting these endangered species.</p>
         </div>
-        <div class="kosgoda-second-first-image-container">
-            <img class="kosgoda-second-first-image-container-one" src="images/pollution2.jpg" alt="">
-            <img class="kosgoda-second-first-image-container-two" src="images/pollution2.jpg" alt="">
+        <div class="bentota-second-first-image-container">
+            <img class="bentota-second-first-image-container-one" src="images/pollution2.jpg" alt="">
+            <img class="bentota-second-first-image-container-two" src="images/pollution2.jpg" alt="">
         </div>
-        <div class="kosgoda-second-second-image-container">
-            <img class="kosgoda-second-second-image-container-one" src="images/pollution2.jpg" alt="">
-            <img class="kosgoda-second-second-image-container-two" src="images/pollution2.jpg" alt="">
+        <div class="bentota-second-second-image-container">
+            <img class="bentota-second-second-image-container-one" src="images/pollution2.jpg" alt="">
+            <img class="bentota-second-second-image-container-two" src="images/pollution2.jpg" alt="">
         </div>
-        <div class="kosgoda-second-third-image-container">
-            <img class="kosgoda-second-third-image-container-one" src="images/pollution2.jpg" alt="">
-            <img class="kosgoda-second-third-image-container-two" src="images/pollution2.jpg" alt="">
+        <div class="bentota-second-third-image-container">
+            <img class="bentota-second-third-image-container-one" src="images/pollution2.jpg" alt="">
+            <img class="bentota-second-third-image-container-two" src="images/pollution2.jpg" alt="">
         </div>
     </section>
 
-    <section class="kosgoda-third">
-        <div class="kosgoda-third-container">
-            <div class="kosgoda-third-text-container">
+    <section class="bentota-third">
+        <div class="bentota-third-container">
+            <div class="bentota-third-text-container">
                 <h3>Discover the various ways to engage with the Kosgoda Sea Turtle Hatchery</h3>
                 <hr>
             </div>
-            <div class="kosgoda-third-first-item-container">
-                <div class="kosgoda-third-item-one">
+            <div class="bentota-third-first-item-container">
+                <div class="bentota-third-item-one">
                     <h4>Galle Day Tour</h4>
                     <br>
                     <p>Uncover the treasures of Galle, a UNESCO World Heritage Site, during this concise half-day private tour. Embark on a private boat safari through the enchanting mangrove forests of Bentota River. Witness the wonder of baby sea turtles at the Kosgoda Sea Turtle Conservation Project. Delve into the captivating history of Galle's Old Town and its impressive fortifications. Lastly, visit the Community Tsunami Museum for a poignant glimpse into the city's resilience. Experience the highlights of Galle in a concise and immersive adventure.</p>
@@ -118,9 +116,9 @@
                 </div>
                 <img src="images/pollution2.jpg" alt="">
             </div>
-            <div class="kosgoda-third-second-item-container">
+            <div class="bentota-third-second-item-container">
                 <img src="images/pollution2.jpg" alt="">
-                <div class="kosgoda-third-item-two">
+                <div class="bentota-third-item-two">
                     <h4>Day Excursions to Galle Fort & Bentota from Colombo</h4>
                     <br>
                     <p>Galle, located in the southwest of Sri Lanka, is a vibrant coastal city that holds immense historical significance. It
@@ -138,8 +136,8 @@
                     </button>
                 </div>
             </div>
-            <div class="kosgoda-third-third-item-container">
-                <div class="kosgoda-third-item-three">
+            <div class="bentota-third-third-item-container">
+                <div class="bentota-third-item-three">
                     <h4>Yala Safari Day Trip</h4>
                     <br>
                     <p>Bentota Travel Mart (BTM) offers an exciting Yala Safari Day Trip for travelers staying in Bentota, Induruwa, Kosgoda,
@@ -157,9 +155,9 @@
                 </div>
                 <img src="images/pollution2.jpg" alt="">
             </div>
-            <div class="kosgoda-third-fourth-item-container">
+            <div class="bentota-third-fourth-item-container">
                 <img src="images/pollution2.jpg" alt="">
-                <div class="kosgoda-third-item-four">
+                <div class="bentota-third-item-four">
                     <h4>Trip with Stilt Fishermen</h4>
                     <br>
                     <p>In the coastal village of Kosgoda, Sri Lanka, a captivating sight awaits visitors—the stilt fishermen. These skilled
@@ -178,8 +176,8 @@
         </div>
     </section>
 
-    <section class="kosgoda-fourth">
-        <div class="kosgoda-fourth-container">
+    <section class="bentota-fourth">
+        <div class="bentota-fourth-container">
             <h2>F.A.Q</h2>
             <hr><br>
             <h3>What is Kosgoda famous for?</h3>
