--- a/categories.html
+++ b/categories.html
@@ -29,7 +29,7 @@
                     <a href="#">Other</a>
                     <ul class="nav-bar-items-2">
                         <li><a href="kosgoda.html">Kosgoda</a></li>
-                        <li><a href="#">Bentota</a></li>
+                        <li><a href="bentota.html">Bentota</a></li>
                     </ul>
                 </li>
                 <li><a href="#">Donate</a></li>
