--- a/threats.html
+++ b/threats.html
@@ -29,7 +29,7 @@
                     <a href="#">Other</a>
                     <ul class="nav-bar-items-2">
                         <li><a href="kosgoda.html">Kosgoda</a></li>
-                        <li><a href="#">Bentota</a></li>
+                        <li><a href="bentota.html">Bentota</a></li>
                     </ul>
                 </li>
                 <li><a href="#">Donate</a></li>
@@ -215,8 +215,9 @@
             <hr>
             <ul>
                 <li class="threat-other-list-item"><a href="hikkaduwa.html">Hikkaduwa Turtle Hatchery</a></li>
-                <li class="threat-other-list-item"><a href="bentota.html">Bentota Turtle Hatchery</a></li>
                 <li class="threat-other-list-item"><a href="kosgoda.html">Kosgoda Turtle Hatchery</a></li>
+                <li class="threat-other-list-item"><a href="bentota.html">Bentota Turtle Hatchery</a></li>
+                
             </ul>
         </div>
     </section>
